# delibra

./: .devmenu.json  .gitignore  PHILOSOPHY.md  README.md  pyproject.toml
docs/: README.md  architecture-principles.md  core-model-v0.1.md  measurement-notes.md  preset-repository.md
docs/adr/: 0001-core-identity.md  0002-runtime-provider-boundary.md  0003-efficient-execution.md
docs/concepts/: README.md  claim-model.md
docs/design-reviews/: delibra-local-web-ui.md  delibra-observatory.md  (+3 more)
examples/: treasure_hunt_design_input.md  treasure_hunt_design_input_gotoo.md
presets/: README.md  code_review.yaml  decision_review.yaml  design_review.yaml  puzzle_design.yaml  treasure_hunt_design.yaml  treasure_hunt_design_selection-0.2.0.yaml  treasure_hunt_design_selection.yaml
scripts/: run_real_code_review.sh
spikes/: spike_0_artifact_derivation.py
tests/: __init__.py  test_app_inputs_presets.py  test_app_inspection_analysis.py  test_app_local_diagnostics.py  test_app_local_runtime.py  test_app_observatory.py  test_app_output_paths.py  test_app_providers.py  test_app_puzzle_spec.py  test_app_run.py  test_app_run_config.py  test_app_storage.py  test_architecture_invariants.py  test_cli.py  test_cli_doctor.py  test_execution_context.py  test_execution_model.py  test_execution_policy.py  test_inspect.py  test_presets.py  test_protocol_loader.py  test_protocol_model.py  test_protocol_validator.py  test_real_scenario_script.py  test_runtime_builders.py  test_runtime_engine.py  test_runtime_language.py  test_runtime_llm.py  test_web_app.py  test_web_paths.py
(+100 files in other folders)
