[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "delibra"
version = "0.1.0"
description = "Artifact-first deliberation orchestration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
delibra = "delibra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
