[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "delibra"
version = "0.1.0"
description = "Artifact-first deliberation orchestration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "fastapi>=0.116",
    "httpx2>=2.7.0",
    "jinja2>=3.1",
    "uvicorn>=0.35",
]

[project.scripts]
delibra = "delibra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"delibra.web" = ["templates/*.html", "static/*.css", "static/*.js"]
